--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <hr>
     <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 40px; color: rgb(239, 169, 39); font-size: 30px;" class="offer-text"> LIMITED TIME OFFER </h1>
     
-    <div class="offers">
+<!--     <div class="offers">
       
         <img class="offer-image" src="OWN DESIGN/—Pngtree—buy 2 get 1 free_6402695.png" alt="Buy 2 Get 1 Free"> 
         <img class="offer-image" src="OWN DESIGN/3 5.png" alt="Buy 2 Get 1 Free">
-    </div> 
+    </div>  -->
   
     <hr>
     <center><h2 id="categories" style="font-size:30px; color:rgb(242, 164, 30);;">COLLECTIONS</h2></center>
