--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<!--     <iframe src='https://my.spline.design/untitled-1ff67526b26b796381fd30a8ca5c37a4/' frameborder='0' width='100%' height='100%'></iframe> -->
+    <iframe src='https://my.spline.design/untitled-1ff67526b26b796381fd30a8ca5c37a4/' frameborder='0' width='100%' height='100%'></iframe>
      
       
   <center><h2 class="t1" style="color: rgb(242, 164, 30); font-size: 30px;  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">WALLREST</h2></center> 
