--- a/collection.html
+++ b/collection.html
@@ -13,7 +13,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a> 
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -234,90 +234,90 @@
         <div class="card">
             <img src="TAM POSTERS/premam 🦋.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('pr', -1)">-</button>
+                <button class="quantity-btn" onclick="updateQuantity('premam', -1)">-</button>
                 <span id="quantity-pr" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('pr', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('premam', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Premam')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Rangaaa Walapeper _ Aavesham Movie.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Ranga', -1)">-</button>
+                <span id="quantity-Ranga" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Ranga', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Rangaaa')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Vaaranam Aayiram.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('va', -1)">-</button>
+                <span id="quantity-va" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('va', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Vaaranam Aayiram')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/vadachennai.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('vadachennai', -1)">-</button>
+                <span id="quantity-vadachennai" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('vadachennai', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('vadachennai')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Yaaradi Ni Mohini Poster.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ynm', -1)">-</button>
+                <span id="quantity-ynm" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ynm', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('YNM')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/99a83228-34d2-4c67-aa3f-bd018eb53763.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('nayagan', -1)">-</button>
+                <span id="quantity-nayagan" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('nayagan', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Nayagan')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/2466493e-e5f5-4272-ba3f-d8a0d02a5a16.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('vns', -1)">-</button>
+                <span id="quantity-vns" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('vns', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('VNS')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/5d937cf3-5231-48fc-9977-49c2416f9728.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('maaveeran', -1)">-</button>
+                <span id="quantity-maaveeran" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('maaveeran', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Maaveeran')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/62eb7e08-9799-41c4-ae1e-f20ca39c7672.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('as', -1)">-</button>
+                <span id="quantity-as" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('as', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Anbae Sivam')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/aa3c07d4-801a-44e6-a640-b49e050aa536.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', -1)">-</button>
-                <span id="quantity-kaithi" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kaithi', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('jigar', -1)">-</button>
+                <span id="quantity-jigar" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('jiagr', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Jigar')">Add to Cart</button>
         </div>
