--- a/aesthetics.html
+++ b/aesthetics.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a> 
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -32,15 +32,15 @@
       <a href="bts.html">K-POP</a>
       <a href="anime.html">ANIME</a>
     </div>
-    <center><h2 style="font-size:50px; color: rgb(250, 247, 247); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">ASTHETICS</h2></center>
+    <center><h2 style="font-size:30px; color: rgb(250, 247, 247); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">ASTHETICS</h2></center>
 
     <div class="card-container">
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (1).jpg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', -1)">-</button>
-                <span id="quantity-0abe57fd-e92f-46e4-a738-f5e91d4ccafd" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ae1', -1)">-</button>
+                <span id="ae1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ae1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 1')">Add to Cart</button>
         </div>
@@ -48,9 +48,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (2).jpg" alt="Poster 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', -1)">-</button>
-                <span id="quantity-65dfe1cb-5bac-4312-922b-10afbebcda28" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ae2', -1)">-</button>
+                <span id="quantity-ae2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ae2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 2')">Add to Cart</button>
         </div>
@@ -58,9 +58,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (3).jpg" alt="Poster 3">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', -1)">-</button>
-                <span id="quantity-775f4bf4-cb38-4928-8ad9-8cff74d13484" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ae3', -1)">-</button>
+                <span id="quantity-ae3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ae3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 3')">Add to Cart</button>
         </div>
@@ -68,9 +68,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (4).jpg" alt="Poster 9">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', -1)">-</button>
-                <span id="quantity-eae9324b-1ed8-40a2-9157-6cdb3a95288c" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ae4', -1)">-</button>
+                <span id="ae4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ae4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 4')">Add to Cart</button>
         </div>
@@ -205,9 +205,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (18).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift1', -1)">-</button>
+                <span id="quantity-tokyo-drift1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 18')">Add to Cart</button>
         </div>
@@ -215,9 +215,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (19).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift2', -1)">-</button>
+                <span id="quantity-tokyo-drift2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 19')">Add to Cart</button>
         </div>
@@ -225,9 +225,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (20).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift3', -1)">-</button>
+                <span id="quantity-tokyo-drift3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 20')">Add to Cart</button>
         </div>
@@ -235,9 +235,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (21).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift4', -1)">-</button>
+                <span id="quantity-tokyo-drift4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 21')">Add to Cart</button>
         </div>
@@ -245,9 +245,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (22).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift5', -1)">-</button>
+                <span id="quantity-tokyo-drift5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 22')">Add to Cart</button>
         </div>
@@ -255,9 +255,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (23).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift6', -1)">-</button>
+                <span id="quantity-tokyo-drift6" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift6', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 23')">Add to Cart</button>
         </div>
@@ -265,9 +265,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (24).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift7', -1)">-</button>
+                <span id="quantity-tokyo-drift7" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift7', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 24')">Add to Cart</button>
         </div>
