--- a/aesthetics.html
+++ b/aesthetics.html
@@ -322,11 +322,11 @@
                 let quantity = selectedQuantities[item] || 1;
     
                 cart[item] = quantity;
-                // if (cart[item]) {
-                //     cart[item] += quantity;
-                // } else {
-                //     cart[item] = quantity;
-                // }
+                if (cart[item]) {
+                    cart[item] += quantity;
+                } else {
+                    cart[item] = quantity;
+                }
                 updateCartDisplay();
             }
             
