--- a/aesthetics.html
+++ b/aesthetics.html
@@ -39,7 +39,7 @@
             <img src="AESTHETICS/ASTHETICS (1).jpg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('ae1', -1)">-</button>
-                <span id="ae1" style="color: rgb(6, 6, 6);">1</span>
+                <span id="quantity-ae1" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('ae1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 1')">Add to Cart</button>
@@ -69,7 +69,7 @@
             <img src="AESTHETICS/ASTHETICS (4).jpg" alt="Poster 9">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('ae4', -1)">-</button>
-                <span id="ae4" style="color: rgb(6, 6, 6);">1</span>
+                <span id="quantity-ae4" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('ae4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 4')">Add to Cart</button>
