--- a/aesthetics.html
+++ b/aesthetics.html
@@ -321,12 +321,12 @@
             function addToCart(item) {
                 let quantity = selectedQuantities[item] || 1;
     
-                cart[item] = quantity;
-                if (cart[item]) {
-                    cart[item] += quantity;
-                } else {
-                    cart[item] = quantity;
-                }
+                // cart[item] = quantity;
+                // if (cart[item]) {
+                //     cart[item] += quantity;
+                // } else {
+                //     cart[item] = quantity;
+                // }
                 updateCartDisplay();
             }
             
