--- a/collection.html
+++ b/collection.html
@@ -189,34 +189,34 @@
         <div class="card">
             <img src="TAM POSTERS/good bad ugly ajith_ 💫.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('gbu', -1)">-</button>
-                <span id="quantity-gbu" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('gbu', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GBU', -1)">-</button>
+                <span id="quantity-GBU" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GBU', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GBU')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/meyazhagan.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('mei', -1)">-</button>
-                <span id="quantity-mei" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('mei', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Meiazhagan', -1)">-</button>
+                <span id="quantity-Meiazhagan" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Meiazhagan', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Meiazhagan')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Ajith Kumar.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('gub1', -1)">-</button>
+                <button class="quantity-btn" onclick="updateQuantity('gbu1', -1)">-</button>
                 <span id="quantity-gbu1" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('gbu1', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('GBU1')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('gbu1')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Katradhu tamizh.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('kt', -1)">-</button>
+                <button class="quantity-btn" onclick="updateQuantity('katrathu Tamizh', -1)">-</button>
                 <span id="quantity-kt" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('kt', 1)">+</button>
             </div>
@@ -229,13 +229,13 @@
                 <span id="quantity-pp" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('pp', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('Pariyerum Perumal')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('pp')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/premam 🦋.jpeg" alt="Vikram">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('premam', -1)">-</button>
-                <span id="quantity-pr" style="color: rgb(6, 6, 6);">1</span>
+                <span id="quantity-premam" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('premam', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Premam')">Add to Cart</button>
@@ -252,9 +252,9 @@
         <div class="card">
             <img src="TAM POSTERS/Vaaranam Aayiram.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('va', -1)">-</button>
-                <span id="quantity-va" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('va', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Varanam Aayiram', -1)">-</button>
+                <span id="quantity-Varanam Aayiram" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Varanam Aayiram', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Vaaranam Aayiram')">Add to Cart</button>
         </div>
@@ -274,14 +274,14 @@
                 <span id="quantity-ynm" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('ynm', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('YNM')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('ynm')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/99a83228-34d2-4c67-aa3f-bd018eb53763.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('nayagan', -1)">-</button>
-                <span id="quantity-nayagan" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('nayagan', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Nayagan', -1)">-</button>
+                <span id="quantity-Nayagan" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Nayagan', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Nayagan')">Add to Cart</button>
         </div>
@@ -292,7 +292,7 @@
                 <span id="quantity-vns" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('vns', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('VNS')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('vns')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/5d937cf3-5231-48fc-9977-49c2416f9728.jpeg" alt="Vikram">
@@ -301,23 +301,23 @@
                 <span id="quantity-maaveeran" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('maaveeran', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('Maaveeran')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('maaveeran')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/62eb7e08-9799-41c4-ae1e-f20ca39c7672.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('as', -1)">-</button>
-                <span id="quantity-as" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('as', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Anbae Sivam', -1)">-</button>
+                <span id="quantity-Anbae Sivam" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Anbae Sivam', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Anbae Sivam')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/aa3c07d4-801a-44e6-a640-b49e050aa536.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('jigar', -1)">-</button>
-                <span id="quantity-jigar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('jiagr', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Jigar', -1)">-</button>
+                <span id="quantity-Jigar" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Jiagr', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Jigar')">Add to Cart</button>
         </div>
