--- a/collection.html
+++ b/collection.html
@@ -217,26 +217,26 @@
             <img src="TAM POSTERS/Katradhu tamizh.jpeg" alt="Vikram">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('katrathu Tamizh', -1)">-</button>
-                <span id="quantity-kt" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('kt', 1)">+</button>
+                <span id="quantity-katrathu Tamizh" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('katrathu Tamizh', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('katrathu Tamizh')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Pariyerum Perumal WallPaper.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('pp', -1)">-</button>
-                <span id="quantity-pp" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('pp', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('pariyerum perumal', -1)">-</button>
+                <span id="quantity-pariyerum perumal" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('pariyerum perumal', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('pp')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('pariyerum perumal')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/premam 🦋.jpeg" alt="Vikram">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('premam', -1)">-</button>
-                <span id="quantity-premam" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('premam', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Premam', -1)">-</button>
+                <span id="quantity-Premam" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('Premam', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Premam')">Add to Cart</button>
         </div>
@@ -247,7 +247,7 @@
                 <span id="quantity-Ranga" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('Ranga', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('Rangaaa')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('Ranga')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="TAM POSTERS/Vaaranam Aayiram.jpeg" alt="Vikram">
