--- a/collection.html
+++ b/collection.html
@@ -317,7 +317,7 @@
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('Jigar', -1)">-</button>
                 <span id="quantity-Jigar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('Jiagr', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('Jigar', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Jigar')">Add to Cart</button>
         </div>
