--- a/aesthetics.html
+++ b/aesthetics.html
@@ -38,9 +38,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (1).jpg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('ae1', -1)">-</button>
-                <span id="quantity-ae1" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('ae1', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 1', -1)">-</button>
+                <span id="quantity-AESTHETICS 1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 1')">Add to Cart</button>
         </div>
@@ -48,9 +48,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (2).jpg" alt="Poster 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('ae2', -1)">-</button>
-                <span id="quantity-ae2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('ae2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 2', -1)">-</button>
+                <span id="quantity-AESTHETICS 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 2')">Add to Cart</button>
         </div>
