--- a/aesthetics.html
+++ b/aesthetics.html
@@ -38,11 +38,11 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (1).jpg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS1', -1)">-</button>
-                <span id="quantity-AESTHETICS1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 1', -1)">-</button>
+                <span id="quantity-AESTHETICS 1" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('AESTHETICS1', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('AESTHETICS1')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('AESTHETICS 1')">Add to Cart</button>
         </div>
         
         <div class="card">
@@ -58,9 +58,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (3).jpg" alt="Poster 3">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('ae3', -1)">-</button>
-                <span id="quantity-ae3" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('ae3', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 3', -1)">-</button>
+                <span id="quantity-AESTHETICS 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 3')">Add to Cart</button>
         </div>
@@ -68,9 +68,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (4).jpg" alt="Poster 9">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('ae4', -1)">-</button>
-                <span id="quantity-ae4" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('ae4', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 4', -1)">-</button>
+                <span id="quantity-AESTHETICS 4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 4')">Add to Cart</button>
         </div>
@@ -78,18 +78,18 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (5).jpg" alt="Poster 10">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('Inception', -1)">-</button>
-                <span id="quantity-Inception" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('Inception', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 5', -1)">-</button>
+                <span id="quantity-AESTHETICS 5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 5')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (6).jpg" alt="FAST & FURIOUS 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', -1)">-</button>
-                <span id="quantity-fast-furious-2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 6', -1)">-</button>
+                <span id="quantity-AESTHETICS 6" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 6', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 6')">Add to Cart</button>
         </div>
@@ -97,9 +97,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (7).jpg" alt="FAST & FURIOUS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', -1)">-</button>
-                <span id="quantity-fast-furious" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 7', -1)">-</button>
+                <span id="quantity-AESTHETICS 7" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 7', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 7')">Add to Cart</button>
         </div>
@@ -107,9 +107,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (8).jpg" alt="GODFATHER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('godfather', -1)">-</button>
-                <span id="quantity-godfather" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('godfather', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 8', -1)">-</button>
+                <span id="quantity-AESTHETICS 8" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 8', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 8')">Add to Cart</button>
         </div>
@@ -117,9 +117,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (9).jpg" alt="HANGOVER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('hangover', -1)">-</button>
-                <span id="quantity-hangover" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('hangover', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 9', -1)">-</button>
+                <span id="quantity-AESTHETICS 9" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 9', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 9')">Add to Cart</button>
         </div>
@@ -127,9 +127,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (10).jpg" alt="Interstellar">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', -1)">-</button>
-                <span id="quantity-interstellar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 10', -1)">-</button>
+                <span id="quantity-AESTHETICS 10" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 10', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 10')">Add to Cart</button>
         </div>
@@ -137,9 +137,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (11).jpg" alt="JOHN WICK">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', -1)">-</button>
-                <span id="quantity-john-wick" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 11', -1)">-</button>
+                <span id="quantity-AESTHETICS 11" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 11', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 11')">Add to Cart</button>
         </div>
@@ -147,9 +147,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (12).jpg" alt="MISSION IMPOSSIBLE">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', -1)">-</button>
-                <span id="quantity-mission-impossible" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 12', -1)">-</button>
+                <span id="quantity-AESTHETICS 12" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 12', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 12')">Add to Cart</button>
         </div>
@@ -157,9 +157,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (13).jpg" alt="SHAWSHANK REDEMPTION">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', -1)">-</button>
-                <span id="quantity-shawshank" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 13', -1)">-</button>
+                <span id="quantity-AESTHETICS 13" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 13', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 13')">Add to Cart</button>
         </div>
@@ -167,9 +167,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (14).jpg" alt="STRANGER THINGS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', -1)">-</button>
-                <span id="quantity-stranger-things" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 14', -1)">-</button>
+                <span id="quantity-AESTHETICS 14" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 14', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 14')">Add to Cart</button>
         </div>
@@ -177,9 +177,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (15).jpg" alt="THE BOYS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', -1)">-</button>
-                <span id="quantity-the-boys" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 15', -1)">-</button>
+                <span id="quantity-AESTHETICS 15" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 15', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 15')">Add to Cart</button>
         </div>
@@ -196,18 +196,18 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (17).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 17', -1)">-</button>
+                <span id="quantity-AESTHETICS 17" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 17', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 17')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (18).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift1', -1)">-</button>
-                <span id="quantity-tokyo-drift1" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift1', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 18', -1)">-</button>
+                <span id="quantity-AESTHETICS 18" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 18', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 18')">Add to Cart</button>
         </div>
@@ -215,9 +215,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (19).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift2', -1)">-</button>
-                <span id="quantity-tokyo-drift2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 19', -1)">-</button>
+                <span id="quantity-AESTHETICS 19" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 19', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 19')">Add to Cart</button>
         </div>
@@ -225,9 +225,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (20).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift3', -1)">-</button>
-                <span id="quantity-tokyo-drift3" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift3', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 20', -1)">-</button>
+                <span id="quantity-AESTHETICS 20" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 20', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 20')">Add to Cart</button>
         </div>
@@ -235,9 +235,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (21).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift4', -1)">-</button>
-                <span id="quantity-tokyo-drift4" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift4', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 21', -1)">-</button>
+                <span id="quantity-AESTHETICS 21" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 21', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 21')">Add to Cart</button>
         </div>
@@ -245,9 +245,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (22).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift5', -1)">-</button>
-                <span id="quantity-tokyo-drift5" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift5', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 22', -1)">-</button>
+                <span id="quantity-AESTHETICS 22" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 22', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 22')">Add to Cart</button>
         </div>
@@ -255,9 +255,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (23).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift6', -1)">-</button>
-                <span id="quantity-tokyo-drift6" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift6', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 23', -1)">-</button>
+                <span id="quantity-AESTHETICS 23" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 23', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 23')">Add to Cart</button>
         </div>
@@ -265,9 +265,9 @@
         <div class="card">
             <img src="AESTHETICS/ASTHETICS (24).jpg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift7', -1)">-</button>
-                <span id="quantity-tokyo-drift7" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift7', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 24', -1)">-</button>
+                <span id="quantity-AESTHETICS 24" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('AESTHETICS 24', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('AESTHETICS 24')">Add to Cart</button>
         </div>
