--- a/anime.html
+++ b/anime.html
@@ -98,7 +98,7 @@
             <img src="anime/anime1 (7).jpg" alt="FAST & FURIOUS">
             <div class="cart-controls">
                 <button class="quantity-btn" onclick="updateQuantity('Anime 7', -1)">-</button>
-                <span id="quantity-Anime 7 style="color: rgb(6, 6, 6);">1</span>
+                <span id="quantity-Anime 7" style="color: rgb(6, 6, 6);">1</span>
                 <button class="quantity-btn" onclick="updateQuantity('Anime 7', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('Anime 7')">Add to Cart</button>
