--- a/engcollec.html
+++ b/engcollec.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a> 
       <a href="collection.html">TAMIL POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -196,74 +196,74 @@
     <div class="card">
         <img src="ENG POSTERS/Breaking Bad.jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('breaking-bad', -1)">-</button>
+            <span id="quantity-breaking-bad" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('breaking-bad', 1)">+</button>
         </div>
         <button class="add-to-cart" onclick="addToCart('breaking-bad')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/WOLF OF WALL STREET 2.jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('Wolf of the wall street', -1)">-</button>
+            <span id="quantity-Wolf of the wall street" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('Wolf of the wall street', 1)">+</button>
         </div>
         <button class="add-to-cart" onclick="addToCart('Wolf of the wall street')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/𝓕𝓻𝓮𝓮 𝓕𝓲𝓻𝓮.jpg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('Money Heist', -1)">-</button>
+            <span id="quantity-Money Heist" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('Money Heist', 1)">+</button>
         </div>
         <button class="add-to-cart" onclick="addToCart('Money Heist')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/ENG POST (1).jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('Scarface', -1)">-</button>
+            <span id="quantity-Scarface" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('Scarface', 1)">+</button>
         </div>
-        <button class="add-to-cart" onclick="addToCart('Squid GAME ')">Add to Cart</button>
+        <button class="add-to-cart" onclick="addToCart('Scarface')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/ENG POST (2).jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('peaky blinder', -1)">-</button>
+            <span id="quantity-peaky blinder" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('peaky blinder', 1)">+</button>
         </div>
-        <button class="add-to-cart" onclick="addToCart('Squid GAME ')">Add to Cart</button>
+        <button class="add-to-cart" onclick="addToCart('peaky blinder')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/ENG POST (3).jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('joker1', -1)">-</button>
+            <span id="quantity-joker1" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('joker1', 1)">+</button>
         </div>
-        <button class="add-to-cart" onclick="addToCart('Squid GAME ')">Add to Cart</button>
+        <button class="add-to-cart" onclick="addToCart('joker1 ')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/ENG POST (4).jpeg" alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('joker2', -1)">-</button>
+            <span id="quantity-joker2" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('joker2', 1)">+</button>
         </div>
-        <button class="add-to-cart" onclick="addToCart('Squid GAME ')">Add to Cart</button>
+        <button class="add-to-cart" onclick="addToCart('joker2')">Add to Cart</button>
     </div>
     <div class="card">
         <img src="ENG POSTERS/ENG POST (5).jpeg " alt="TOKYO DRIFT">
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-            <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('Titanic', -1)">-</button>
+            <span id="quantity-Titanic" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('Titanic', 1)">+</button>
         </div>
-        <button class="add-to-cart" onclick="addToCart('Squid GAME ')">Add to Cart</button>
+        <button class="add-to-cart" onclick="addToCart('Titanic')">Add to Cart</button>
     </div>
 
     
